--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fingerprintjs/fingerprintjs": "^3.3.6",
+    "@maskito/phone": "^3.1.2",
+    "@maskito/react": "^3.1.2",
     "@mui/lab": "^5.0.0-alpha.107",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@testing-library/jest-dom": "^5.16.5",
