--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.22.2",
     "axios": "^1.0.0",
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
