--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "frontend",
   "version": "2.1.0",
   "private": true,
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fingerprintjs/fingerprintjs": "^3.3.6",
     "@maskito/phone": "^3.1.2",
     "@maskito/react": "^3.1.2",
+    "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +25,7 @@
     "jose": "^4.11.1",
     "npm": "^10.8.2",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
@@ -30,8 +33,10 @@
     "react-loading-skeleton": "^3.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-pdf": "^5.7.2",
+    "react-redux": "^9.1.2",
     "react-textarea-autosize": "^8.4.0",
     "react-token-auth": "^2.3.8",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.77.8",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
@@ -62,6 +67,7 @@
   },
   "devDependencies": {
     "@types/escape-html": "^1.0.4",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-pdf": "^5.7.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1"
