--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "3.2.0",
+  "version": "3.3.5",
   "private": true,
   "proxy": "http://localhost:4000/",
   "dependencies": {
@@ -17,7 +17,6 @@
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.22.2",
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
     "install": "^0.13.0",
@@ -68,6 +67,9 @@
     "@types/escape-html": "^1.0.4",
     "@types/react-collapse": "^5.0.4",
     "@types/react-pdf": "^5.7.2",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "eslint": "^9.19.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1"
   }
