--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,6 @@
     "tabWidth": 2,
     "semi": true,
     "jsxSingleQuote": false,
-    "bracketSpacing": true
+    "bracketSpacing": true,
+    "endOfLine": "auto"
   }
