--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "escape-html": "^1.0.3",
     "install": "^0.13.0",
     "npm": "^10.8.2",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "pdfjs-dist": "^5.1.91",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-jwt": "^1.1.7",
+    "react-pdf": "^9.2.1",
     "react-redux": "^9.1.2",
     "react-token-auth": "^2.3.8",
     "sass": "^1.77.8",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@types/escape-html": "^1.0.4",
+    "@types/pdf-viewer-reactjs": "^2.2.5",
     "@types/react-collapse": "^5.0.4",
     "@types/react-pdf": "^5.7.2",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
